--- a/thio.opam
+++ b/thio.opam
@@ -6,8 +6,8 @@ maintainer: ["Gustavo Medeiros"]
 authors: ["Gustavo Medeiros"]
 license: "LICENSE"
 tags: ["topics" "to describe" "your" "project"]
-homepage: "https://github.com/mendes13/thio"
-bug-reports: "https://github.com/mendes13/thio/issues"
+homepage: "https://github.com/gustavomdeiros/thio"
+bug-reports: "https://github.com/gustavomdeiros/thio/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.2"}
@@ -27,4 +27,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/mendes13/thio.git"
+dev-repo: "git+https://github.com/gustavomdeiros/thio.git"
