--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/ocaml
 # Edit at https://www.toptal.com/developers/gitignore?templates=ocaml
 
+# Direnv
+.direnv
+
 ### OCaml ###
 *.annot
 *.cmo
