--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,8 @@
 (library
- (public_name thio)
  (name thio)
+ (public_name thio)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving.eq)))
+
+(ocamllex lexer)
+
+(menhir (modules parser))
